[Header Bar] Fix overlapping text on header bar
Fix overlapping text on header bar by removing a duplicate z-index attribute of the header element and increasing the z-index of the original attribute.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2173,7 +2173,6 @@ table.alt tfoot {
 		text-align: right;
 		top: 2em;
 		width: 100%;
-		z-index: 10009;
 		-moz-transition: background-color 0.2s ease-in-out;
 		-webkit-transition: background-color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out;
@@ -2259,7 +2258,7 @@ table.alt tfoot {
   text-align: right;
   top: 2em;
   width: 100%;
-  z-index: 10001;
+  z-index: 10006;
 }
 
 #header .inner {
